# CredAudit

./: .credaudit_cache.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  README_before_ndjson.md  banner.txt  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  credaudit.yml  release.yml
credaudit/: __init__.py  __main__.py  cache.py  cli.py  config.py  orchestrator.py
credaudit/detection/: rules.py  scan.py
credaudit/exporters/: csv_exporter.py  html_exporter.py  json_exporter.py  ndjson_exporter.py  sarif_exporter.py
credaudit/html_templates/: report.html.j2
credaudit/parsers/: extract.py  har.py
credaudit/utils/: common.py  entropy.py
credaudit_out/: findings.ndjson  report_20250907_212336.csv  report_20250907_212336.html  report_20250907_212336.json  report_20250907_213056.json  report_20250907_235751.html
docs/: SCHEMA.md
scripts/: bump_version.py  precommit_scan.py
tests/: secrets.txt
tests/e2e/: test_cli_scan.py
