[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "credaudit"
version = "0.4.0"
description = "Fast, resilient secret scanner"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["jinja2","python-docx","pdfminer.six","openpyxl","pyyaml","rarfile"]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
]
[project.scripts]
credaudit = "credaudit.cli:main"

[tool.setuptools.packages.find]
where = [""]
include = ["credaudit*"]
